<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSOBEC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="password">Password</string>
    <string name="accept_Login">Login</string>
    <string name="email">Email</string>
    <string name="temperature">Temperature</string>
    <string name="occupancy">Occupancy</string>
    <string name="status">Plug Load</string>
    <string name="artificialLighting">Lighting</string>
    <string name="action_logout">Logout</string>
    <string name="action_addzone">Add Zone</string>
    <string name="action_addAppliance">Add Appliance</string>
    <string name="action_editusers">Edit Users</string>
    <string name="action_locate_user">Location</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="outside_temperature">Temperature Outside the Building:</string>
    <string name="zone_temperature">Temperature in Current Zone:</string>
    <string name="min_outside_temp_f">Min F</string>
    <string name="n_a">N/A</string>
    <string name="wasteful_regions">Save Energy</string>
    <string name="rating_regions">Rate current Zone conditions</string>
    <string name="reports">Reports</string>
    <string name="create_zone">Create Zone</string>
    <string name="my_rewards">My Rewards</string>
    <string name="create_account_submit">Submit</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="record_room">Record Current Room</string>

    <!-- Activity titles -->
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_launcher_name">SMART BUILDING</string>
    <string name="title_activity_my_zones">My Zones</string>
    <string name="title_activity_zones_description">ZonesDescriptionActivity</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="temperature_ac_performance">Temperature AC Performance</string>
    <string name="title_activity_consumption_appliances">ConsumptionAppliances</string>
    <string name="title_activity_create_account">Create Account</string>

    <!-- Occupancy Energy Activity -->
    <string name="current_occupancy">Occupants currently in the room </string>
    <string name="current_lighting">Light status in the room </string>

    <string name="average_occupancy">Average Occupancy Per Day: </string>

    <string name="prediction_consumption">Predict Consumption</string>
    <string name="title_activity_prediction_appliances">PredictionAppliances</string>

    <string name="electronic_appliances">Electronic Appliances</string>

    <string name="amount_appliances">Amount Appliances</string>
    <string name="consumption_appliances_childrow_image">An image that represents the appliance name</string>
    <string name="calculate_consumption">Monthly Consumption</string>

    <string name="title_activity_acconsumption_prediction">Predict AC Consumption</string>
    <string name="predict_appl_consumption">Predict Consumption of Appliances</string>

    <string name="forecast_temperature_outside">Outside Temperature Today: </string>
    <string name="ac_mean_medium_temperature_inside">Mean Medium Temperature Inside: </string>
    <string name="ac_mean_high_temperature_inside">Mean High Temperature Inside: </string>

    <string name="ac_mean_low_temperature_outside">Mean Low Temperature Outside: </string>
    <string name="ac_mean_medium_temperature_outside">Mean Medium Temperature Outside: </string>
    <string name="ac_mean_high_temperature_outside">Mean High Temperature Outside: </string>

    <string name="ac_inside_temperature_today">Enter Inside Temperature: </string>

    <string name="title_activity_antivity_acconsumption_prediction2">
        antivity_acconsumption_prediction2
    </string>

    <string name="temperature_inside_editext">today\'s building temperature</string>

    <string name="average_lighting">Average Time the Light is ON in a day: </string>

    <string name="lighting_legend_label_wasted">Lighting Energy Wasted </string>
    <string name="lighting_legend_label_consumed">Lighting Energy Efficiently Consumed </string>

    <string name="empty_room_msg">It seems this room has no data yet.</string>

    <string name="title_activity_add_zone">Add Zone</string>
    <string name="title_activity_edit_zone_users">Edit Zone Users</string>

    <string name="add_user_to_zone">Add User</string>
    <string name="remove_user_from_zone">Remove User</string>
    <string name="add_user_button">Add User</string>
    <string name="add_user_email_hint">Enter User Email</string>
    <string name="tv_user_email">User Email</string>

    <string name="remove_user_button">Remove User</string>
    <string name="remove_user_email_hint">Enter User Email</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    
    <string name="zone_description_piechart_title">Percentage of energy consumed:</string>
    <string name="title_activity_create_zone">CreateZoneActivity</string>
    <string name="title_activity_my_rewards">MyRewards</string>
    <string name="title_activity_wasteful_regions">WastefulRegionsActivity</string>
    <string name="title_activity_edit_zone">EditZone</string>

    <string name="edit_zone_add_location">Add Location</string>
    <string name="edit_zone_add_windows">Add Windows</string>
    <string name="title_activity_zone_appliances">ZoneAppliances</string>

    <!-- Add Appliance -->
    <string name="add_appliance_name">Appliance Name</string>
    <string name="add_appliance_type">Appliance Type</string>
    <string name="add_appliance_status">Status</string>
    <string name="add_appliance_energy_usage_kwh">Energy Usage kwh</string>
    <string name="hint_add_appliance_name">Enter appliance name</string>
    <string name="hint_add_appliance_type">Enter appliance type</string>
    <string name="hint_add_appliance_status">Enter Status</string>
    <string name="hint_add_appliance_energy_usage_kwh">Enter Energy Usage kwh</string>
    <string name="title_activity_add_user_to_zone">AddUserToZoneActivity</string>
    <string name="title_activity_remove_user_from_zone">RemoveUserFromZoneActivity</string>
    <string name="title_activity_turn_light_off">TurnLightOffActivity</string>
    <string name="title_activity_turn_appliance_off">TurnApplianceOffActivity</string>
    <string name="title_activity_send_notification">SendNotification</string>
    <string name="title_activity_get_reports">GetReportsActivity</string>

    <!-- Application button descriptions -->
    <string name="plugload_award_descrp">Reward for little consumption of energy in plugload</string>

    <!-- Location Service strings -->
    <string name="notificaiontitle">Indoor Location</string>
    <string name="notificationmsg">Using magnetic fields for indoor location</string>
    <string name="notifcationmsgfailed">We failed to recieve the location data to create thread!</string>
    <string name="mapview">Map view</string>
    <string name="emailpref">fiu.ssobec.email</string>
</resources>


