<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="fiu.ssobec.Activity.MyZonesActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/temp_ac_performance"
        android:title="@string/temperature_ac_performance"
        android:orderInCategory="40"
        app:showAsAction="never" />

</menu>
