<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_appliances_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/pad_30dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/pad_15dp"
                android:text="@string/add_appliance_name" />
            <EditText
                android:id="@+id/appliance_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/hint_add_appliance_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/pad_15dp"
                android:text="@string/add_appliance_type" />
            <EditText
                android:id="@+id/appliance_type"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/hint_add_appliance_type"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/pad_15dp"
                android:text="@string/add_appliance_status" />
            <EditText
                android:id="@+id/appliance_status"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/hint_add_appliance_status"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/pad_15dp"
                android:text="@string/add_appliance_energy_usage_kwh" />
            <EditText
                android:id="@+id/appliance_energy_usage"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/hint_add_appliance_energy_usage_kwh"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/pad_30dp">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set" />
    </LinearLayout>

</LinearLayout>