<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fiu.ssobec.Activity.ZonesDescriptionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/TemperatureButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="getTemperature"
        android:background="#ff6bb3ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupancy"
        android:id="@+id/OccupancyButton"
        android:layout_below="@+id/TemperatureButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:layout_alignEnd="@+id/TemperatureButton"
        android:background="#ff6bb3ff"
        android:onClick="getOccupancy" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/PludLoadButton"
        android:layout_below="@+id/OccupancyButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:layout_alignEnd="@+id/OccupancyButton"
        android:background="#ff6bb3ff"
        android:onClick="getPlugLoad" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artificialLighting"
        android:id="@+id/ArticialLightingButton"
        android:layout_below="@+id/PludLoadButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:layout_alignEnd="@+id/PludLoadButton"
        android:background="#ff6bb3ff"
        android:onClick="getLighting" />
</RelativeLayout>
