<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_button_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="left"
                android:gravity="center_horizontal"
                android:src="@drawable/add_user_512" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/add_user_to_zone"
                android:textColor="@color/default_background"
                android:textSize="30dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:paddingLeft="@dimen/pad_30dp"
        android:background="@drawable/lightbluepatternrepeat"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:text="@string/tv_user_email"
            android:textColor="@color/default_background"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/add_user_email_hint"
            android:layout_marginLeft="@dimen/pad_30dp" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="20px"
        android:paddingTop="10px"
        android:text="@string/add_user_button"
        android:id="@+id/add_user_button"
        android:layout_marginTop="20dp"
        android:background="#ff0ed39e" />

</LinearLayout>