<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fiu.ssobec.Activity.ZonesDescriptionActivity">

    <com.androidplot.pie.PieChart
        android:id="@+id/mySimplePieChart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:id="@+id/TemperatureButton"
            android:onClick="getTemperature"
            android:background="#ff6bb3ff"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:src="@drawable/thermometer" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/occupancy"
            android:id="@+id/OccupancyButton"
            android:background="#ffff6176"
            android:onClick="getOccupancy"
            android:layout_gravity="top"
            android:layout_weight="0.50"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:src="@drawable/grouppeople"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/PludLoadButton"
            android:background="#ff22d053"
            android:onClick="getPlugLoad"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:src="@drawable/plug"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artificialLighting"
            android:id="@+id/ArticialLightingButton"
            android:background="#fffff30f"
            android:onClick="getLighting"
            android:layout_weight="0.50"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:src="@drawable/lightbulb"/>


    </LinearLayout>




</LinearLayout>
