<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fiu.ssobec.Activity.EditZone">

    <EditText
        android:id="@+id/edit_zone_name"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/background_material_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/pad_15dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mylocation"
                android:layout_marginRight="@dimen/pad_15dp"/>
            <EditText
                android:id="@+id/edit_zone_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_zone_add_location"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/pad_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_crop"
                android:layout_marginRight="@dimen/pad_15dp"/>
            <TextView
                android:id="@+id/edit_zone_windows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_zone_add_windows"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
