<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fiu.ssobec.LoginActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_Login"
        android:id="@+id/login_button"
        android:layout_marginBottom="52dp"
        android:onClick="@string/accept_Login"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/password_text_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/email_text_view"
        android:textSize="@dimen/login_textfield_size"
        android:singleLine="false"
        android:layout_above="@+id/password_test_view"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="126dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_text_field"
        android:layout_below="@+id/email_text_view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/password_test_view"
        android:text="@string/password"
        android:textSize="@dimen/login_textfield_size"
        android:layout_above="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="96dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_text_field"
        android:layout_alignTop="@+id/email_text_view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

</RelativeLayout>
